Table "Organisator" {
  "Id" int [pk]
  "Naam" varchar(255)
  "Gebruikersnaam" varchar(255)
  "Wachtwoord" varchar(255)
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Table "Bezoeker" {
  "Id" int [pk]
  "Naam" varchar(255)
  "Email" varchar(255)
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Table "Evenement" {
  "Id" int [pk]
  "Naam" varchar(255)
  "Datum" date
  "Locatie" varchar(255)
  "AantalTicketsPerTijdslot" int
  "BeschikbareStands" int
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Table "Prijs" {
  "Id" int [pk]
  "EvenementId" int
  "Datum" date
  "Tijdslot" varchar(255)
  "Tarief" decimal
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Table "Ticket" {
  "Id" int [pk]
  "BezoekerId" int
  "EvenementId" int
  "PrijsId" int
  "AantalTickets" int
  "Datum" datetime
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Table "Verkoper" {
  "Id" int [pk]
  "Naam" varchar(255)
  "SpecialeStatus" boolean
  "VerkooptSoort" varchar(255)
  "StandType" varchar(255)
  "Dagen" varchar(255)
  "Logo" varchar(255)
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Table "Stand" {
  "Id" int [pk]
  "VerkoperId" int
  "StandType" varchar(255)
  "Prijs" decimal
  "VerhuurdStatus" boolean
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Table "Contactpersoon" {
  "Id" int [pk]
  "Naam" varchar(255)
  "Telefoonnummer" varchar(255)
  "Email" varchar(255)
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Table "ContactPerVerkoper" {
  "Id" int [pk]
  "VerkoperId" int
  "ContactpersoonId" int
  "Isactief" boolean
  "Opmerking" text
  "Datumaangemaakt" datetime
  "Datumgewijzigd" datetime
}

Ref:"Evenement"."Id" < "Prijs"."EvenementId"

Ref:"Bezoeker"."Id" < "Ticket"."BezoekerId"

Ref:"Evenement"."Id" < "Ticket"."EvenementId"

Ref:"Prijs"."Id" < "Ticket"."PrijsId"

Ref:"Verkoper"."Id" < "Stand"."VerkoperId"

Ref:"Verkoper"."Id" < "ContactPerVerkoper"."VerkoperId"

Ref:"Contactpersoon"."Id" < "ContactPerVerkoper"."ContactpersoonId"
